--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,18 @@
 <html lang="en">
   <head>
-    <title>HELIX</title>
+    <title>Francois Laubscher | Software Engineer</title>
     <meta name='description' content='🧬 Yet another opinionated PWA ready React boilerplate with pre-rendering.'>
     <meta name='og:title' content='HELIX'>
     <meta name='og:description' content='🧬 Yet another opinionated PWA ready React boilerplate with pre-rendering.'>
     <meta name='og:image' content='https://i.imgur.com/5FJS5G0.png'>
     <meta name='og:url' content='https://fjlaubscher.github.io/helix/'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, shrink-to-fit=no'>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-    <base href='<%= htmlWebpackPlugin.options.publicPath %>'>
+    <base href='/'>
   </head>
   <body>
     <div id='root'></div>
