--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
     <meta name='og:image' content='https://i.imgur.com/5FJS5G0.png'>
     <meta name='og:url' content='https://fjlaubscher.github.io/helix/'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, shrink-to-fit=no'>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="manifest" href="site.webmanifest">
     <base href='/'>
   </head>
