mobile and desktop

--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,30 @@
 <html lang="en">
   <head>
     <title>Francois Laubscher | Software Engineer</title>
-    <meta name='description' content='🧬 Yet another opinionated PWA ready React boilerplate with pre-rendering.'>
-    <meta name='og:title' content='HELIX'>
-    <meta name='og:description' content='🧬 Yet another opinionated PWA ready React boilerplate with pre-rendering.'>
-    <meta name='og:image' content='https://i.imgur.com/5FJS5G0.png'>
-    <meta name='og:url' content='https://fjlaubscher.github.io/helix/'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, shrink-to-fit=no'>
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="manifest" href="site.webmanifest">
-    <base href='/'>
+    <meta
+      name="description"
+      content="I'm a freelance software engineer with 8+ years of experience in developing and maintaining robust web apps."
+    />
+    <meta name="og:title" content="Francois Laubscher | Software Engineer" />
+    <meta
+      name="og:description"
+      content="I'm a freelance software engineer with 8+ years of experience in developing and maintaining robust web apps."
+    />
+    <meta name="og:image" content="https://francois.codes/me.png" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <base href="/" />
   </head>
   <body>
-    <div id='root'></div>
+    <div id="root"></div>
   </body>
 </html>
