--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <html lang="en">
   <head>
-    <title>Francois Laubscher | Software Engineer</title>
+    <title>Francois Laubscher | Freelance Software Engineer</title>
     <meta
       name="description"
       content="I'm a freelance software engineer with 8+ years of experience in developing and maintaining robust web apps."
     />
-    <meta name="og:title" content="Francois Laubscher | Software Engineer" />
+    <meta name="og:title" content="Francois Laubscher | Freelance Software Engineer" />
     <meta
       name="og:description"
       content="I'm a freelance software engineer with 8+ years of experience in developing and maintaining robust web apps."
