--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
     <title>Francois Laubscher | Freelance Software Engineer</title>
     <meta
       name="description"
