--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <base href="/" />
   </head>
   <body>
-    <div id="root"></div>
+  <div id="root"></div>
+  <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
