updated open graph image and copy

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <title>Francois Laubscher | Freelance Software Engineer</title>
     <meta
       name="description"
-      content="I'm a freelance software engineer with 8+ years of experience in developing and maintaining robust web apps."
+      content="I'm a freelance software engineer with 9+ years of experience in developing and maintaining robust web apps."
     />
     <meta name="og:title" content="Francois Laubscher | Freelance Software Engineer" />
     <meta
       name="og:description"
-      content="I'm a freelance software engineer with 8+ years of experience in developing and maintaining robust web apps."
+      content="I'm a freelance software engineer with 9+ years of experience in developing and maintaining robust web apps."
     />
-    <meta name="og:image" content="https://francois.codes/me.png" />
+    <meta name="og:image" content="https://francoislaubscher.dev/me.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
