--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Francois Laubscher | Freelance Software Engineer</title>
+    <title>Francois Laubscher | Senior Front-End Engineer</title>
     <meta
       name="description"
-      content="I'm a Senior Front-End Engineer at Toptal with 9+ years of experience in developing and maintaining robust web apps."
+      content="I'm a Senior Front-End Engineer at Toptal with 10+ years of experience in developing and maintaining robust web apps."
     />
     <meta name="og:title" content="Francois Laubscher | Freelance Software Engineer" />
     <meta
       name="og:description"
-      content="I'm a Senior Front-End Engineer at Toptal with 9+ years of experience in developing and maintaining robust web apps."
+      content="I'm a Senior Front-End Engineer at Toptal with 10+ years of experience in developing and maintaining robust web apps."
     />
     <meta name="og:image" content="https://francoislaubscher.dev/me.png" />
     <meta
