--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Francois Laubscher | Freelance Software Engineer</title>
     <meta
       name="description"
-      content="I'm a Freelance Software Engineer with 11+ years of experience in developing and maintaining robust web apps."
+      content="I'm a Freelance Software Engineer with 11+ years of experience in developing and maintaining robust web applications."
     />
     <meta name="og:title" content="Francois Laubscher | Freelance Software Engineer" />
     <meta
       name="og:description"
-      content="I'm a Freelance Software Engineer with 11+ years of experience in developing and maintaining robust web apps."
+      content="I'm a Freelance Software Engineer with 11+ years of experience in developing and maintaining robust web applications."
     />
     <meta name="og:image" content="https://francoislaubscher.dev/me.png" />
     <meta
